--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4.2.2
       with:
-        repository: Coldvvater/Mononoke
+        repository: xiaobailong6/Mononoke
         path: Mononoke-repo
 
     - name: GeoIP
